src/objects/Avalara_Log__c.object
<CustomObject>
    <fields>
        <fullName>Avalara_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Avalara Account</label>
        <referenceTo>AVA_SFCORE__TaxNowSetting__c</referenceTo>
        <relationshipLabel>Avalara Logs</relationshipLabel>
        <relationshipName>Avalara_Logs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Milliseconds__c</fullName>
        <label>Milliseconds</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Avalara Log</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Avalara Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avalara Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>